--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -2,8 +2,11 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1;
- padding: 25px;
- background: -webkit-linear-gradient(left, rgba(4,191,212,0.9) 0%, rgba(117,8,161,0.9) 100%);
+  background-image: url("../images/img_tree.gif"), url("../images/paper.gif");
+  background-position: right bottom, left top;
+  background-repeat: no-repeat, repeat;
+ padding: 15px 15px 15px 15px;
+
 }
 
 header {
@@ -107,7 +110,7 @@ font-weight: bold;
 text-align: center;
 color: rgb(88, 9, 104);
 text-shadow: 2px 2px 0px #eee;
-background-color: #92aad4;
+background: -webkit-linear-gradient(left, rgba(4,191,212,0.9) 0%, rgba(117,8,161,0.9) 100%);
 padding: 10px 20px 10px 20px;
 }
 
